[SACClient-003] Endpoints protection / update routes and data